--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Cormorant+Garamond');
 </style>
 * { margin:0; padding: 0; box-sizing:border-box; }
+
 section {
     padding: 5em 0;
 }
@@ -10,12 +11,24 @@ h1, h2, h3{
 	text-transform: uppercase;
 	text-align: center;
 }
+
 p{
 	font-family: 'Cormorant Garamond', serif;
 	font-size: 18px;
 }
 
+header {
+	
+	background-color: #FFED74;
+	border: 1px black solid;
+	padding: 20px;
+}
 
+#logo{
+
+	display:block;
+	margin:0 auto;
+}
 #splash{
 	text-align: center;
 	background: url(../images/Media.jpg);
@@ -28,6 +41,7 @@ p{
 	background:purple;
 	color:#fff;
 	font-family: 'Cormorant Garamond', serif;
+
 }
 .important{
 	text-shadow: 5px 5px 5px rgba(0,0,0,.2);
@@ -36,23 +50,9 @@ p{
 	color: red;
 	text-align: center;
 }
-.Portfolio{
-
-
-}
-
-.left{
+span{
 	padding-left: 30px;
 	padding-right: 30px;
 }
-.right{
-		padding-left: 30px;
-	    padding-right: 30px;
-}
 	
-
-	
-
-
-
 
